--- a/Chess/GUI/GamePage.xaml
+++ b/Chess/GUI/GamePage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="Chess.GamePage"
+﻿<Page x:Class="Chess.GUI.GamePage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -9,7 +9,11 @@
       Title="GamePage">
 
     <Page.Resources>
-        <Image x:Key="black_pawn" Height="60" Stretch="Fill" Width="60" Source="Images/black_pawn.png" />
+        <DataTemplate x:Key="Selected">
+            <Canvas>
+                <Border Canvas.Left="{Binding XPosition}" Canvas.Top="{Binding YPosition, FallbackValue=-1500}"  Width="60" Height="60" BorderBrush="LimeGreen" BorderThickness="3" />
+            </Canvas>
+        </DataTemplate>
     </Page.Resources>
     
     <Grid>
@@ -64,7 +68,42 @@
                         </Style>
                     </ItemsControl.ItemContainerStyle>
                 </ItemsControl>
-                
+
+                <ItemsControl Name="PossibleMovesLoop" ItemsSource="{Binding Path=GameBoard.PossibleMoves}" >
+                    <ItemsControl.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <Canvas />
+                        </ItemsPanelTemplate>
+                    </ItemsControl.ItemsPanel>
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <Border Width="60" Height="60" BorderBrush="LimeGreen" Background="LimeGreen" Opacity="0.5" />
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                    <ItemsControl.ItemContainerStyle>
+                        <Style TargetType="{x:Type FrameworkElement}">
+                            <Setter Property="Canvas.Left" Value="{Binding Path=XPosition}" />
+                            <Setter Property="Canvas.Top" Value="{Binding Path=YPosition}" />
+                        </Style>
+                    </ItemsControl.ItemContainerStyle>
+                </ItemsControl>
+
+
+                <ContentControl ContentTemplate="{StaticResource Selected}" Content="{Binding Path=GameBoard.SelectedTile}" />
+                <!--<ContentControl Content="{Binding Path=GameBoard.SelectedTile}">
+                    <ContentControl.Template>
+                        <ControlTemplate>
+                            <Border Width="60" Height="60" BorderBrush="Red" BorderThickness="3" />
+                        </ControlTemplate>
+                    </ContentControl.Template>
+                    <ContentControl.Style>
+                        <Style TargetType="{x:Type FrameworkElement}">
+                            <Setter Property="Canvas.Left" Value="{Binding Path=XPosition}" />
+                            <Setter Property="Canvas.Top" Value="{Binding Path=YPosition}" />
+                        </Style>
+                    </ContentControl.Style>
+                </ContentControl>-->
+
             </Canvas>
         </Border>
 
