--- a/Chess/GUI/MainWindow.xaml
+++ b/Chess/GUI/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<NavigationWindow x:Class="Chess.MainWindow"
+﻿<NavigationWindow x:Class="Chess.GUI.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
