--- a/Chess/GUI/GamePage.xaml
+++ b/Chess/GUI/GamePage.xaml
@@ -8,16 +8,13 @@
       d:DesignHeight="480" d:DesignWidth="480"
       Title="GamePage">
 
-    <Page.Resources>
-        <DataTemplate x:Key="Selected">
-            <Canvas>
-                <Border Canvas.Left="{Binding XPosition}" Canvas.Top="{Binding YPosition, FallbackValue=-1500}"  Width="60" Height="60" BorderBrush="LimeGreen" BorderThickness="3" />
-            </Canvas>
-        </DataTemplate>
-    </Page.Resources>
-    
     <Grid>
-        <Border Width="482" Height="482" BorderBrush="Black" BorderThickness="1">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="2*" />
+            <ColumnDefinition Width="1*" />
+        </Grid.ColumnDefinitions>
+
+        <Border Grid.Column="0" Width="482" Height="482" BorderBrush="Black" BorderThickness="1">
             <Canvas Name="BoardCanvas" MouseDown="ClickOnBoard">
                 <Rectangle Width="480" Height="480" Canvas.Left="0" Canvas.Top="0">
                     <Rectangle.Fill>
@@ -88,23 +85,34 @@
                     </ItemsControl.ItemContainerStyle>
                 </ItemsControl>
 
-
-                <ContentControl ContentTemplate="{StaticResource Selected}" Content="{Binding Path=GameBoard.SelectedTile}" />
-                <!--<ContentControl Content="{Binding Path=GameBoard.SelectedTile}">
-                    <ContentControl.Template>
-                        <ControlTemplate>
-                            <Border Width="60" Height="60" BorderBrush="Red" BorderThickness="3" />
-                        </ControlTemplate>
-                    </ContentControl.Template>
-                    <ContentControl.Style>
-                        <Style TargetType="{x:Type FrameworkElement}">
-                            <Setter Property="Canvas.Left" Value="{Binding Path=XPosition}" />
-                            <Setter Property="Canvas.Top" Value="{Binding Path=YPosition}" />
-                        </Style>
-                    </ContentControl.Style>
-                </ContentControl>-->
+                <Border Canvas.Left="{Binding Path=GameBoard.SelectedTile.XPosition}"
+                        Canvas.Top="{Binding Path=GameBoard.SelectedTile.YPosition, FallbackValue=-1500}" 
+                        Width="60" Height="60" BorderBrush="LimeGreen" BorderThickness="3" />
 
             </Canvas>
+        </Border>
+
+        <Border Grid.Column="1" Margin="10, 10, 10, 10" BorderBrush="Black" BorderThickness="2">
+            <Grid Margin="10, 10, 10, 10">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="1*" />
+                </Grid.RowDefinitions>
+
+                <TextBlock Grid.Row="0" TextElement.FontSize="20">Game message:</TextBlock>
+                <TextBlock Grid.Row="1" TextElement.FontSize="14" Text="{Binding Path=GameMessage.Message}" Margin="2, 10, 0, 0"></TextBlock>
+                
+                <Grid Grid.Row="2">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="1*" />
+                        <ColumnDefinition Width="1*" />
+                    </Grid.ColumnDefinitions>
+
+                    <Button Margin="10, 0, 10, 0" Grid.Column="0" VerticalAlignment="Bottom" Click="SaveGameClick">Save Game</Button>
+                    <Button Margin="10, 0, 10, 0" Grid.Column="1" VerticalAlignment="Bottom" Click="MainMenuClick">Main Menu</Button>
+                </Grid>
+            </Grid>
         </Border>
 
         
