--- a/Chess/GUI/MainWindow.xaml
+++ b/Chess/GUI/MainWindow.xaml
@@ -1,10 +1,12 @@
-﻿<NavigationWindow x:Class="Chess.GUI.MainWindow"
+﻿<Window x:Class="Chess.GUI.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Chess"
+        xmlns:local="clr-namespace:Chess.GUI"
         mc:Ignorable="d"
-        Title="Chess" Height="600" Width="1000" Source="MainMenuPage.xaml">
+        Title="Chess" Height="600" Width="1000">
 
-</NavigationWindow>
+    <Frame NavigationUIVisibility="Hidden" Name="MainFrame" Source="MainMenuPage.xaml"/>
+
+</Window>
