--- a/Chess/GUI/MainMenuPage.xaml
+++ b/Chess/GUI/MainMenuPage.xaml
@@ -13,11 +13,13 @@
             <ImageBrush ImageSource="Images/chessBackground.jpeg"/>
         </Grid.Background>
         
-        <Button Margin="50,50,0,0" Width="125" Height="25" Click="NewGameClick"
+        <Button Margin="100,40,0,0" Width="125" Height="25" Click="NewGameClick"
                 VerticalAlignment="Top" HorizontalAlignment="Left">New Game</Button>
-        <Button Margin="0,50,0,0" Width="125" Height="25" Click="LoadGameClick"
-                VerticalAlignment="Top" HorizontalAlignment="Center">Load Game</Button>
-        <Button Margin="0,50,50,0" Width="125" Height="25" Click="ExitGameClick"
+        <Button Margin="100,80,0,0" Width="125" Height="25" Click="ResumeGameClick"
+                VerticalAlignment="Top" HorizontalAlignment="Left">Resume Game</Button>
+        <Button Margin="100,120,0,0" Width="125" Height="25" Click="LoadGameClick"
+                VerticalAlignment="Top" HorizontalAlignment="Left">Load Game</Button>
+        <Button Margin="0,40,100,0" Width="125" Height="25" Click="ExitGameClick"
                 VerticalAlignment="Top" HorizontalAlignment="Right">Exit Game</Button>
     </Grid>
 </Page>
